# audio-transcriber

./: .gitignore  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
audio_transcriber/: __init__.py  __main__.py  cli.py  deps.py  downloader.py  transcriber.py
audio_transcriber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
